# pokemon-deck-builder

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyrightconfig.json
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: cache.py  config.py  main.py
backend/app/agent/: ARCHITECTURE.md  graph.py  prompt.py  simulatiom.py
backend/app/agent/functions/: deck.py  mask.py
backend/app/agent/models/: game_state.py  player_state.py
backend/app/agent/state/: start.py
backend/app/docs/: ARCHITECTURE.md
backend/app/models/: deck.py  simulation.py
backend/app/routers/: agent.py  cards.py  decks.py  meta.py
backend/app/services/: deck_import.py  limitless.py  pokemon_tcg.py
frontend/: Dockerfile  README.md  nginx.docker.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CardGrid.tsx  CardSearch.tsx  DeckBuilder.tsx  DeckStats.tsx  FindDecks.tsx  SavedDecks.tsx
frontend/src/hooks/: useCards.ts  useDecks.ts
frontend/src/pages/: Home.tsx  Simulation.tsx
frontend/src/types/: pokemon.ts
