[project]
name = "pokemon-deck-builder-api"
version = "0.1.0"
description = "Pokemon Deck Builder API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.2",
    "redis>=5.1.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "beautifulsoup4>=4.12.0",
    "langgraph>=1.1.10",
]

